gofastpay.css
/* ... */
#contact h4 {
    color: #a9a25b;
    font-family: Georgia, serif;
    font-style: italic;
    font-size: 14px;
}

#contact p {
    font-size: 14px;
    font-family: Arial, sans-serif;
    color: rgb(189, 189, 189);
    width: 85%;
    margin-right: 96px;
    padding-bottom: 4px;
    border-bottom: rgb(81, 81, 81) solid 1px;
}

address {
    font-style: normal;
}

/* Splash screen */
#fold {
    background-color: rgb(237,237,237);
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
}

.news #fold, .contact #fold {
    padding-bottom: 120px;
}

#leader {
    float: left;
    padding: 148px 0 0 60px;
    width: 408px;
}

.home #leader {
    width: auto;
}

.leader.short {
    width: 408px;
}

.leader.tall {
    float: left;
    width: 460px;
}

#marquee {
    float: left;
    margin-left: 40px;
}

#marquee img {
    padding-top: 60px;
}

#marquee img.short {
    margin-bottom: 52px;
}

#marquee img.tall {
    margin-bottom: 10px;
    margin-left: 0px;
}

.what-we-do #marquee img {
    padding-bottom: 90px;
}

#marquee-switch {
    float: left;
    clear: both;
    width: 100%;
    text-align: center;
    margin: 0 5px 20px 5px;
}

.leader {
    font-family: 'Apex New Medium', sans-serif;
}

.leader .title {
    font-size: 48px; /* 48pt; */
    color: #282828;
    margin-bottom: 24px;
}
    
.leader .sub {
    font-size: 17px; /* 17pt; */
    color: #5c5c5c;
    line-height: 150%; /* 26pt; */
}
    
.tagline {
    font-family: 'Apex New Medium', sans-serif;
    font-size: 32px;
    color: #fff;
    text-align: center;
    width: 100%;
    letter-spacing: 0.075em;
}

.tagline .learn-more-link {
    font-size: 16px;
    vertical-align: middle;
    margin-left: 36px;
    letter-spacing: normal;
}

.tagline .learn-more-link img {
    vertical-align: middle; /* Seems to line up the arrow just right! */
}

/* Breaking styles */

.learn-more-link {
    font-family: 'Apex New Medium', sans-serif;
}

.learn-more-link {
    text-decoration: none;
    color: inherit;
}

.break {
    float: left;
    clear: both;
    width: 100%;
}

.break.thick {
    padding-top: 90px;
    padding-bottom: 82px;
}


.black {
    background-color: black;
}

.turquoise {
    background-color: #00a8e0;
}

#explanation {
    font-family: Helvetica, sans-serif;
    text-align: center;
    padding: 60px 135px;
}

#explanation h1 {
    font-size: 24px;
    font-family: 'Apex New Medium', sans-serif;
    text-align: inherit;
    text-transform: uppercase;
    letter-spacing: 2px;
}

#explanation p {
    color: rgb(155,155,155);
    line-height: 28px;
    font-size: 18px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.what-we-do #explanation p  {
    padding-left: 100px;
    padding-right: 100px;
}

.how-it-works #explanation p {
    padding-left: 50px;
    padding-right: 50px;
}

#explanation p strong {
    font-weight: bold;
    color: rgb(0, 158, 204);
}

/* Beginning of the Home Page sections (using .home to cordon off home page styling)*/

/* What We Do Section */

.home #what-we-do {
    float: left;
    padding-top: 72px;
    padding-bottom: 90px;
}

.home .description {
    float: left;
    font-family: Helvetica, sans-serif;
}

.home #how-it-works {
    float: left;
    padding-bottom: 90px;
}

.home #what-we-do .description {
    width: 50%;
}

.home .description h3 {
    color: #282828;
    font-size: 16px;
    line-height: 26px;
    font-weight: bold;
    padding-left: 115px;
}
    
.home .description p {
    font-size: 14px;
    color: #4d4d4d;
    line-height: 26px;
    padding-left: 115px;
}

.home #banker-quote {
    float: right;
    width: 50%;
}

.home blockquote.banker-quote {
    font-family: "Gotham Thin Regular", sans-serif;
    color: #4d4d4d;
    font-size: 40px;
    line-height: 40px;
    margin: 0;
    padding-top: 10px;
    padding-left: 64px;
    font-weight: 200;
}

/* How it works stylings */

.home #how-it-works h2 {
    padding-top: 62px;
    padding-bottom: 58px;
    text-align: center;
    font-family: 'Apex New Light', sans-serif;
    text-transform: uppercase;
    color: #282828;
    font-size: 24px;
    font-weight: 700;
    letter-spacing: 4px;
}

.home .opportunity {
    width: 33%;
    float: left;
}

.home .opportunity p  {
    font-family: 'Georgia', serif;
    font-size: 12px;
    line-height: 22px;
    letter-spacing: 1px;
    padding-left: 32px;
    padding-right: 32px;
    color: #555;
    text-align: center;
}

.home .opportunity img {
    margin: auto;
    display: block;
}

.home .opportunity div.middle {
    border-left: 2px solid #e5e5e5;
    border-right: 2px solid #e5e5e5;
}

.home .learn-about {
    font-family: 'Open Sans', sans-serif;
    letter-spacing: normal;
    text-align: center;
    color: rgb(0, 168, 224);
}

.home .opportunity .learn-about {
    margin-top: 45px;
    color: rgb(0, 168, 224);
}

.home .opportunity .opportunity-link {
    font-family: Georgia, serif;
    font-size: 18px;
    color: inherit;
    text-decoration: none;
}

.home .opportunity .opportunity-link img {
    display: inline-block;
}

/* Who we help */

.home #who-we-help {
    background-color: #efefef;
    padding-bottom: 90px;
    float: left;
}

.home #who-we-help .description {
    width: 50%;
}

.home #who-we-help h2 {
    padding-top: 84px;
    text-align: center;
    text-transform: uppercase;
    font-size: 20px;
    font-family: "Gotham Bold Regular", sans-serif;
}

.home #who-we-help blockquote {
    font-family: Georgia, serif;
    font-size: 36px;
    text-align: center;
    color: rgb(159, 140, 107);
}

.home #who-we-help cite {
    font-family: Helvetica, sans-serif;
    font-size: 14px;
    text-align: center;
    font-style: normal;
    text-align: center;
    display: block;
    margin: auto;
    padding-bottom: 24px;
}

.home #who-we-help cite .name {
    font-weight: bold;
}

.home #who-we-help cite .title {
    font-style: italic;
}

.home #who-we-help hr {
    width: 252px;
    margin: auto;
    margin-bottom: 24px;
}
/* ... */

